--- a/manifest.json
+++ b/manifest.json
@@ -10,8 +10,18 @@
 		"title": "{{appTitle}}",
 		"description": "{{appDescription}}",
 		"sourceTemplate": {
-			"id": "ui5template.basicSAPUI5ApplicationProject",
-			"version": "1.40.12"
+			"id": "servicecatalog.connectivityComponent",
+			"version": "0.0.0"
+		},
+		"dataSources": {
+			"getDados.svc": {
+				"uri": "/getDadosTreinamento/getDados.svc/",
+				"type": "OData",
+				"settings": {
+					"odataVersion": "2.0",
+					"localUri": "localService/metadata.xml"
+				}
+			}
 		}
 	},
 	"sap.ui": {
@@ -58,6 +68,16 @@
 				"settings": {
 					"bundleName": "produto2.i18n.i18n"
 				}
+			},
+			"": {
+				"type": "sap.ui.model.odata.v2.ODataModel",
+				"settings": {
+					"defaultOperationMode": "Server",
+					"defaultBindingMode": "Default",
+					"defaultCountMode": "Request"
+				},
+				"dataSource": "getDados.svc",
+				"preload": true
 			}
 		},
 		"resources": {
@@ -69,18 +89,51 @@
 			"config": {
 				"routerClass": "sap.m.routing.Router",
 				"viewType": "XML",
-				"viewPath": "produtos2.view",
+				"viewPath": "produto2.view",
 				"controlId": "app",
 				"controlAggregation": "pages",
 				"transition": "slide",
 				"async": true
 			},
 			"routes": [{
-				"name": "route name",
+				"name": "login",
 				"pattern": "",
 				"titleTarget": "",
-				"greedy": false
-			}]
+				"greedy": false,
+				"target": ["login"]
+			}, {
+				"name": "main",
+				"pattern": "Main",
+				"titleTarget": "",
+				"greedy": false,
+				"target": ["main"]
+			}, {
+				"name": "listProdutos",
+				"pattern": "Products",
+				"titleTarget": "",
+				"greedy": false,
+				"target": ["listProdutos"]
+			}],
+			"targets": {
+				"login": {
+					"viewType": "XML",
+					"transition": "slide",
+					"clearAggregation": true,
+					"viewName": "Login"
+				},
+				"main": {
+					"viewType": "XML",
+					"transition": "slide",
+					"clearAggregation": true,
+					"viewName": "Main"
+				},
+				"listProdutos": {
+					"viewType": "XML",
+					"transition": "slide",
+					"clearAggregation": true,
+					"viewName": "ListProdutos"
+				}
+			}
 		}
 	}
 }
